[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://sounds/unpause.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/pause.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/ui/SelectSquare.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/effects/theme.tres" type="Theme" id=6]
[ext_resource path="res://scenes/effects/BackgroundBlur.gdshader" type="Shader" id=7]
[ext_resource path="res://assets/font/font.ttf" type="DynamicFontData" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 7 )
shader_param/lod = 1.0
shader_param/aberration_strength = 0.5

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.3, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 3, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background Color" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.666667, 0.666667, 0.666667, 0.129412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -32.5
margin_bottom = 32.5
custom_fonts/font = SubResource( 2 )
text = "paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="ResumeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="SelectSquare" parent="." instance=ExtResource( 5 )]
options_path = NodePath("../Options")

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = 70.5
margin_right = 78.0
margin_bottom = 147.5
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Label" parent="Options"]
margin_right = 156.0
margin_bottom = 15.0
text = "replay"
align = 1
valign = 1

[node name="Quit" type="Label" parent="Options"]
margin_top = 30.0
margin_right = 156.0
margin_bottom = 45.0
text = "quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Label" parent="Options"]
margin_top = 60.0
margin_right = 156.0
margin_bottom = 75.0
text = "back to main menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 3 )
anims/FadeOut = SubResource( 4 )
